# Object-Parser

./: CMakeLists.txt  README.md
src/: Makefile  Objects.txt  controller.h  fasade_model.cc  fasade_model.h  front.h  main.cc  model.cc  model.h  test.cc
src/model/: facade_model.cc  facade_model.h  fasade_model.cc  fasade_model.h  model.cc  model.h
src/tests/: InvalidTokens.txt  Obj.txt  Obj2.txt  test.cc
